--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,20 @@
 Package: BHIdatalink
 Title: BHI Datalink
 Version: 0.0.0.9000
-Authors@R: person('Nicholas', 'Sunderland', email = 'nicholas.p.sunderland@gmail.com', role = c('cre', 'aut'))
-Description: An R Shiny App to track pacemakers and ICDs at the Bristol Heart Institute.
+Authors@R: 
+    person("Nicholas", "Sunderland", , "nicholas.p.sunderland@gmail.com", role = c("cre", "aut"))
+Description: An R Shiny App to track pacemakers and ICDs at the Bristol
+    Heart Institute.
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.4.1),
     shiny (>= 1.7.4)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
