--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,14 @@ Description: An R Shiny App to track pacemakers and ICDs at the Bristol
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
+    DT,
+    glue,
     golem (>= 0.4.1),
-    shiny (>= 1.7.4)
+    pkgload,
+    shinipsum,
+    shiny (>= 1.7.4),
+    shiny.fluent,
+    shiny.router
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
