--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     DT,
+    ggplot2,
+    ggsankey,
     glue,
     golem (>= 0.4.1),
     plotly,
