--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,3 +24,4 @@ importFrom(shiny.fluent,Stack)
 importFrom(shiny.fluent,Text)
 importFrom(shiny.router,route)
 importFrom(shiny.router,router_ui)
+importFrom(stats,runif)
