--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,17 +4,23 @@ export(run_app)
 import(plotly)
 import(shiny)
 importFrom(DT,DTOutput)
+importFrom(dplyr,tbl)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(odbc,dbConnect)
+importFrom(odbc,dbDisconnect)
+importFrom(odbc,odbc)
 importFrom(shiny,div)
-importFrom(shiny,h2)
 importFrom(shiny,img)
 importFrom(shiny,plotOutput)
 importFrom(shiny,shinyApp)
-importFrom(shiny,tableOutput)
 importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
 importFrom(shiny.fluent,CommandBar)
@@ -24,4 +30,5 @@ importFrom(shiny.fluent,Stack)
 importFrom(shiny.fluent,Text)
 importFrom(shiny.router,route)
 importFrom(shiny.router,router_ui)
+importFrom(shinyWidgets,prettyRadioButtons)
 importFrom(stats,runif)
