--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,14 @@ importFrom(DBI,dbDisconnect)
 importFrom(RSQLite,SQLite)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,coalesce)
 importFrom(dplyr,collect)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
@@ -23,11 +26,13 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
+importFrom(dplyr,ungroup)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,interval)
 importFrom(lubridate,time_length)
 importFrom(lubridate,with_tz)
@@ -54,4 +59,7 @@ importFrom(shiny.router,router_ui)
 importFrom(shinyWidgets,prettyRadioButtons)
 importFrom(shinyWidgets,sliderTextInput)
 importFrom(stringr,str_to_title)
+importFrom(stringr,str_to_upper)
+importFrom(tidyr,complete)
 importFrom(wesanderson,wes_palette)
+importFrom(zoo,rollmean)
