added a leaflet map to the devices page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(run_app)
 import(dbplyr)
 import(ggplot2)
+import(leaflet)
 import(shinipsum)
 import(shiny)
 importFrom(DBI,dbDisconnect)
@@ -27,12 +28,14 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl)
 importFrom(dplyr,ungroup)
+importFrom(geojsonio,geojson_read)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(grDevices,colorRampPalette)
+importFrom(leaflet,leafletOutput)
 importFrom(lubridate,interval)
 importFrom(lubridate,time_length)
 importFrom(lubridate,with_tz)
@@ -41,6 +44,7 @@ importFrom(odbc,dbConnect)
 importFrom(odbc,dbDisconnect)
 importFrom(odbc,odbc)
 importFrom(purrr,map2_df)
+importFrom(readr,read_csv)
 importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
