--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,17 @@ Imports:
     config (>= 0.3.1),
     DBI,
     dplyr,
+    geojsonio,
     ggplot2,
     glue,
     golem (>= 0.4.1),
     grDevices,
+    leaflet,
     lubridate,
     magrittr,
     odbc,
     purrr,
+    readr,
     rlang,
     RSQLite,
     shinipsum,
